; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/v4l2/extr_demux.c_GetAR.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/v4l2/extr_demux.c_GetAR.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_cropcap = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32, i32 }

@V4L2_BUF_TYPE_VIDEO_CAPTURE = common dso_local global i32 0, align 4
@VIDIOC_CROPCAP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, i32*)* @GetAR to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @GetAR(i32 %0, i32* noalias %1, i32* noalias %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.v4l2_cropcap, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = getelementptr inbounds %struct.v4l2_cropcap, %struct.v4l2_cropcap* %7, i32 0, i32 0
  %9 = bitcast %struct.TYPE_2__* %8 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %9, i8 0, i64 8, i1 false)
  %10 = getelementptr inbounds %struct.v4l2_cropcap, %struct.v4l2_cropcap* %7, i32 0, i32 1
  %11 = load i32, i32* @V4L2_BUF_TYPE_VIDEO_CAPTURE, align 4
  store i32 %11, i32* %10, align 4
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @VIDIOC_CROPCAP, align 4
  %14 = call i64 @v4l2_ioctl(i32 %12, i32 %13, %struct.v4l2_cropcap* %7)
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %3
  %17 = load i32*, i32** %6, align 8
  store i32 1, i32* %17, align 4
  %18 = load i32*, i32** %5, align 8
  store i32 1, i32* %18, align 4
  br label %28

19:                                               ; preds = %3
  %20 = getelementptr inbounds %struct.v4l2_cropcap, %struct.v4l2_cropcap* %7, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32*, i32** %5, align 8
  store i32 %22, i32* %23, align 4
  %24 = getelementptr inbounds %struct.v4l2_cropcap, %struct.v4l2_cropcap* %7, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load i32*, i32** %6, align 8
  store i32 %26, i32* %27, align 4
  br label %28

28:                                               ; preds = %19, %16
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i64 @v4l2_ioctl(i32, i32, %struct.v4l2_cropcap*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
